// Copyright (c) The Thanos Authors.
// Licensed under the Apache License 2.0.

syntax = "proto3";

package queryfrontend;

import "store/labelpb/types.proto";

option go_package = "github.com/thanos-io/thanos/pkg/queryfrontend";


message ThanosLabelsResponse {
  // @gotags: json:"status"
  string status = 1;
  // @gotags: json:"data"
  repeated string data = 2;
  // @gotags: json:"errorType,omitempty"
  string errorType = 3;
  // @gotags: json:"error,omitempty"
  string error = 4;
  // @gotags: json:"-"
  repeated ResponseHeader headers = 5;
}

message ThanosSeriesResponse {
  // @gotags: json:"status"
  string status = 1;
  // @gotags: json:"data"
  repeated thanos.ZLabelSet data = 2;
  // @gotags: json:"errorType,omitempty"
  string errorType = 3;
  // @gotags: json:"error,omitempty"
  string error = 4;
  // @gotags: json:"-"
  repeated ResponseHeader headers = 5;
}

message ResponseHeader {
  // @gotags: json:"-"
  string name = 1;
  // @gotags: json:"-"
  repeated string values = 2;
}
